# face_app

./: README.md  pyproject.toml  requirements.txt  setup.py
face_app/: hooks.py
face_app/fixtures/: custom_field.json
