[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "face_app"
authors = [
    {name = "Momscode Technologies", email = "info@momscode.in"}
]
description = "Face App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "qrcode",
    "cmake",
    "opencv-contrib-python",
    "face-recognition",
    "Pillow"
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/chumam2050/face_app"
